# drui

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  config.example.cfg  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  test.yml
docs/: build.md  configuration.md  index.md  quickstart.md  reverse_proxy.md
drui/: app.py  main.py  registry.py
drui/common/: config.py  logging.py  utils.py
drui/middleware/: check_response.py
drui/static/js/: alert.js  core.js  image.js  repositories.js
drui/static/libs/fontawesome/: custom.min.js
drui/static/libs/highlight/: github-dark.min.css  github.min.css  highlight.min.js
drui/static/libs/table.js/: table.min.css  table.min.js
drui/static/themes/: night.css
drui/templates/: core.html  empty.html  error.html  image.html  login.html  repositories.html
tests/: fixtures.py  mock_registry.py  test_config.py  test_log.py  test_server.py
tests/data/: broadcast.md
tests/data/blobs/: 875165454b94.json
tests/data/repositories/docker.io/distribution/: tags.json
tests/data/repositories/docker.io/distribution/latest/: v1.json  v2.json
